--- a/package.json
+++ b/package.json
@@ -6,17 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
-    "@types/node": "20.6.5",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "@stripe/stripe-js": "^2.1.9",
+    "@types/node": "18.15.5",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "axios-hooks": "^4.0.0",
+    "bootstrap": "^5.2.3",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "micro-cors": "^0.1.1",
+    "moment": "^2.29.4",
+    "next": "13.2.4",
+    "pm2": "^5.3.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "sass": "^1.59.3",
+    "swr": "^2.1.1",
+    "typescript": "5.0.2",
+    "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "@types/micro-cors": "^0.1.4",
+    "@types/webfontloader": "^1.6.35"
   }
 }
