--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.4",
+    "@types/gtag.js": "^0.0.16",
     "@types/webfontloader": "^1.6.35"
   }
 }
